# HistAug

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  WHAT_IS_THIS.md  pyproject.toml
src/histaug/: train.py
src/histaug/config/: Histaug_conch.yaml  Histaug_conch_v15.yaml  Histaug_hoptimus1.yaml  Histaug_uni.yaml  Histaug_virchow2.yaml
src/histaug/dataset_csv/: check_data_leak.py  test.csv  train.csv  val.csv
src/histaug/datasets/: data_interface.py  patch_dataset.py
src/histaug/models/: __init__.py  foundation_models.py  histaug_model.py  model_interface.py
src/histaug/utils/: constants.py  hed.py  loss_factory.py  optim_factory.py  transform_factory.py  utils.py
